build/log/idf_py_stderr_output_25306
Command: make -j 14 all
Configuration Report               
 ───────────────────────────────── 
   Parser Version: 1               
   Verbosity: default              
   Status: Finished successfully   
                                   
 ───────────────────────────────── 
info: Default value for ESP_PERIPH_CTRL_FUNC_IN_IRAM in sdkconfig is y but it is n according to Kconfig.
Using default value from sdkconfig (y).
info: Default value for GDMA_CTRL_FUNC_IN_IRAM in sdkconfig is y but it is n according to Kconfig.
Using default value from sdkconfig (y).
info: Default value for LIBC_STDOUT_LINE_ENDING_CRLF in sdkconfig is y but it is n according to Kconfig.
info: Default value for LIBC_STDIN_LINE_ENDING_CR in sdkconfig is y but it is n according to Kconfig.
Configuration Report                     
 ─────────────────────────────────────── 
   Parser Version: 1                     
   Verbosity: default                    
   Status: Finished with notifications   
                                         
 ─────────────────────────────────────── 
/home/frank/Projects/beemonitor/beemonitor/main/beemonitor.c:41:6: error: 'camera_config_t' has no member named 'pin_hsync'; did you mean 'pin_vsync'?
   41 |     .pin_hsync = CAM_PIN_HSYNC,
      |      ^~~~~~~~~
      |      pin_vsync
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/beemonitor.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:6097: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
make: *** [Makefile:136: all] Error 2
